[gd_scene load_steps=12 format=2]

[ext_resource path="res://Graphics/SaperWindow.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Saper.gd" type="Script" id=3]
[ext_resource path="res://Graphics/MessegeIcon.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Smile.png" type="Texture" id=5]
[ext_resource path="res://Graphics/MyComp.png" type="Texture" id=6]
[ext_resource path="res://Graphics/MessegeIcon2.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Minesweeper.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Xbutton.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Kernel.png" type="Texture" id=10]
[ext_resource path="res://Graphics/JitterFreePixelArt.tres" type="Material" id=11]

[node name="Desktop" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 608.0
margin_bottom = 600.0
color = Color( 0.0235294, 0.490196, 0.513726, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DesktopIcons" type="Control" parent="."]
margin_right = 404.0
margin_bottom = 600.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Minesweeper" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 112.0
margin_right = 72.0
margin_bottom = 145.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinesweeperLabel" type="Label" parent="Minesweeper"]
margin_left = -5.0
margin_top = 34.0
margin_right = 81.0
margin_bottom = 48.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Minesweeper"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="TextureButton" parent="."]
margin_left = 38.0
margin_top = 212.0
margin_right = 70.0
margin_bottom = 245.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessagesLabel" type="Label" parent="Message"]
margin_left = -5.0
margin_top = 34.0
margin_right = 81.0
margin_bottom = 48.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Messages"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message2" type="TextureButton" parent="."]
visible = false
margin_left = 38.0
margin_top = 212.0
margin_right = 70.0
margin_bottom = 245.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessagesLabel" type="Label" parent="Message2"]
margin_left = -5.0
margin_top = 34.0
margin_right = 81.0
margin_bottom = 48.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Messages"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MyComp" type="TextureButton" parent="."]
margin_left = 36.0
margin_top = 8.0
margin_right = 68.0
margin_bottom = 41.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MyCompLabel" type="Label" parent="MyComp"]
margin_left = -5.0
margin_top = 36.0
margin_right = 81.0
margin_bottom = 50.0
rect_scale = Vector2( 0.5, 0.5 )
text = "My Computer"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kernel" type="TextureButton" parent="."]
visible = false
margin_left = 32.0
margin_top = 304.0
margin_right = 64.0
margin_bottom = 337.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KernelLabel" type="Label" parent="Kernel"]
margin_left = -6.0
margin_top = 32.0
margin_right = 80.0
margin_bottom = 46.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Go inside the
System"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MineSweeperWindow" type="Node2D" parent="."]
visible = false
position = Vector2( 124, 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Window" type="Sprite" parent="MineSweeperWindow"]
position = Vector2( 200, 284 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Buttons" type="Control" parent="MineSweeperWindow"]
margin_left = 68.0
margin_top = 172.0
margin_right = 332.0
margin_bottom = 436.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_top = 1.0
margin_right = 32.0
margin_bottom = 33.0

[node name="Button2" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 33.0
margin_top = 1.0
margin_right = 65.0
margin_bottom = 33.0

[node name="Button4" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 66.0
margin_top = 1.0
margin_right = 98.0
margin_bottom = 33.0

[node name="Button3" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 99.0
margin_top = 1.0
margin_right = 131.0
margin_bottom = 33.0

[node name="Button8" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 132.0
margin_top = 1.0
margin_right = 164.0
margin_bottom = 33.0

[node name="Button7" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 165.0
margin_top = 1.0
margin_right = 197.0
margin_bottom = 33.0

[node name="Button6" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 198.0
margin_top = 1.0
margin_right = 230.0
margin_bottom = 33.0

[node name="Button5" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 231.0
margin_top = 1.0
margin_right = 263.0
margin_bottom = 33.0

[node name="Button16" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_top = 34.0
margin_right = 32.0
margin_bottom = 66.0

[node name="Button15" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 33.0
margin_top = 34.0
margin_right = 65.0
margin_bottom = 66.0

[node name="Button14" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 66.0
margin_top = 34.0
margin_right = 98.0
margin_bottom = 66.0

[node name="Button13" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 99.0
margin_top = 34.0
margin_right = 131.0
margin_bottom = 66.0

[node name="Button12" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 132.0
margin_top = 34.0
margin_right = 164.0
margin_bottom = 66.0

[node name="Button11" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 165.0
margin_top = 34.0
margin_right = 197.0
margin_bottom = 66.0

[node name="Button10" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 198.0
margin_top = 34.0
margin_right = 230.0
margin_bottom = 66.0

[node name="Button9" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 231.0
margin_top = 34.0
margin_right = 263.0
margin_bottom = 66.0

[node name="Button32" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_top = 67.0
margin_right = 32.0
margin_bottom = 99.0

[node name="Button31" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 33.0
margin_top = 67.0
margin_right = 65.0
margin_bottom = 99.0

[node name="Button30" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 66.0
margin_top = 67.0
margin_right = 98.0
margin_bottom = 99.0

[node name="Button29" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 99.0
margin_top = 67.0
margin_right = 131.0
margin_bottom = 99.0

[node name="Button28" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 132.0
margin_top = 67.0
margin_right = 164.0
margin_bottom = 99.0

[node name="Button27" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 165.0
margin_top = 67.0
margin_right = 197.0
margin_bottom = 99.0

[node name="Button26" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 198.0
margin_top = 67.0
margin_right = 230.0
margin_bottom = 99.0

[node name="Button25" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 231.0
margin_top = 67.0
margin_right = 263.0
margin_bottom = 99.0

[node name="Button24" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_top = 100.0
margin_right = 32.0
margin_bottom = 132.0

[node name="Button23" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 33.0
margin_top = 100.0
margin_right = 65.0
margin_bottom = 132.0

[node name="Button22" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 66.0
margin_top = 100.0
margin_right = 98.0
margin_bottom = 132.0

[node name="Button21" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 99.0
margin_top = 100.0
margin_right = 131.0
margin_bottom = 132.0

[node name="Button20" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 132.0
margin_top = 100.0
margin_right = 164.0
margin_bottom = 132.0

[node name="Button19" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 165.0
margin_top = 100.0
margin_right = 197.0
margin_bottom = 132.0

[node name="Button18" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 198.0
margin_top = 100.0
margin_right = 230.0
margin_bottom = 132.0

[node name="Button17" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 231.0
margin_top = 100.0
margin_right = 263.0
margin_bottom = 132.0

[node name="Button64" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_top = 133.0
margin_right = 32.0
margin_bottom = 165.0

[node name="Button63" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 33.0
margin_top = 133.0
margin_right = 65.0
margin_bottom = 165.0

[node name="Button62" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 66.0
margin_top = 133.0
margin_right = 98.0
margin_bottom = 165.0

[node name="Button61" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 99.0
margin_top = 133.0
margin_right = 131.0
margin_bottom = 165.0

[node name="Button60" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 132.0
margin_top = 133.0
margin_right = 164.0
margin_bottom = 165.0

[node name="Button59" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 165.0
margin_top = 133.0
margin_right = 197.0
margin_bottom = 165.0

[node name="Button58" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 198.0
margin_top = 133.0
margin_right = 230.0
margin_bottom = 165.0

[node name="Button57" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 231.0
margin_top = 133.0
margin_right = 263.0
margin_bottom = 165.0

[node name="Button56" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_top = 166.0
margin_right = 32.0
margin_bottom = 198.0

[node name="Button55" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 33.0
margin_top = 166.0
margin_right = 65.0
margin_bottom = 198.0

[node name="Button54" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 66.0
margin_top = 166.0
margin_right = 98.0
margin_bottom = 198.0

[node name="Button53" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 99.0
margin_top = 166.0
margin_right = 131.0
margin_bottom = 198.0

[node name="Button52" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 132.0
margin_top = 166.0
margin_right = 164.0
margin_bottom = 198.0

[node name="Button51" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 165.0
margin_top = 166.0
margin_right = 197.0
margin_bottom = 198.0

[node name="Button50" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 198.0
margin_top = 166.0
margin_right = 230.0
margin_bottom = 198.0

[node name="Button49" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 231.0
margin_top = 166.0
margin_right = 263.0
margin_bottom = 198.0

[node name="Button48" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_top = 199.0
margin_right = 32.0
margin_bottom = 231.0

[node name="Button47" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 33.0
margin_top = 199.0
margin_right = 65.0
margin_bottom = 231.0

[node name="Button46" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 66.0
margin_top = 199.0
margin_right = 98.0
margin_bottom = 231.0

[node name="Button45" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 99.0
margin_top = 199.0
margin_right = 131.0
margin_bottom = 231.0

[node name="Button44" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 132.0
margin_top = 199.0
margin_right = 164.0
margin_bottom = 231.0

[node name="Button43" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 165.0
margin_top = 199.0
margin_right = 197.0
margin_bottom = 231.0

[node name="Button42" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 198.0
margin_top = 199.0
margin_right = 230.0
margin_bottom = 231.0

[node name="Button41" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 231.0
margin_top = 199.0
margin_right = 263.0
margin_bottom = 231.0

[node name="Button40" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_top = 232.0
margin_right = 32.0
margin_bottom = 264.0

[node name="Button39" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 33.0
margin_top = 232.0
margin_right = 65.0
margin_bottom = 264.0

[node name="Button38" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 66.0
margin_top = 232.0
margin_right = 98.0
margin_bottom = 264.0

[node name="Button37" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 99.0
margin_top = 232.0
margin_right = 131.0
margin_bottom = 264.0

[node name="Button36" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 132.0
margin_top = 232.0
margin_right = 164.0
margin_bottom = 264.0

[node name="Button35" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 165.0
margin_top = 232.0
margin_right = 197.0
margin_bottom = 264.0

[node name="Button34" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 198.0
margin_top = 232.0
margin_right = 230.0
margin_bottom = 264.0

[node name="Button33" parent="MineSweeperWindow/Buttons" instance=ExtResource( 2 )]
margin_left = 231.0
margin_top = 232.0
margin_right = 263.0
margin_bottom = 264.0

[node name="Smile" type="Sprite" parent="MineSweeperWindow"]
material = ExtResource( 11 )
position = Vector2( 288, 128 )
texture = ExtResource( 5 )

[node name="TextRect" type="ColorRect" parent="MineSweeperWindow"]
margin_left = 68.0
margin_top = 104.0
margin_right = 256.0
margin_bottom = 164.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MineSweeperWindow"]
margin_left = 72.0
margin_top = 108.0
margin_right = 252.0
margin_bottom = 160.0
text = "Hello stranger
Let's play "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MineSweeperWindow"]
margin_left = 338.0
margin_top = 58.0
margin_right = 362.0
margin_bottom = 80.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
[connection signal="pressed" from="Minesweeper" to="." method="_on_Minesweeper_pressed"]
[connection signal="pressed" from="Message2" to="." method="_on_Message2_pressed"]
[connection signal="pressed" from="Kernel" to="." method="_on_Kernel_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button2" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button4" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button3" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button8" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button7" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button6" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button5" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button16" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button15" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button14" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button13" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button12" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button11" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button10" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button9" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button32" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button31" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button30" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button29" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button28" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button27" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button26" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button25" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button24" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button23" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button22" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button21" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button20" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button19" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button18" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button17" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button64" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button63" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button62" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button61" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button60" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button59" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button58" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button57" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button56" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button55" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button54" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button53" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button52" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button51" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button50" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button49" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button48" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button47" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button46" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button45" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button44" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button43" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button42" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button41" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button40" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button39" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button38" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button37" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button36" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button35" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button34" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/Buttons/Button33" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MineSweeperWindow/TextureButton" to="." method="_on_TextureButton_pressed"]
